--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value = "AIzaSyBIWfbC4w0s0W6faf-VkrEPPROV2nA6LJk"/>
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -24,8 +29,13 @@
         <activity
             android:name=".SessionSettingsActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme"></activity>
-        <activity android:name=".ResultsActivity"></activity>
+            android:theme="@style/AppTheme">
+
+        </activity>
+        <activity android:name=".ResultsActivity">
+
+        </activity>
+
     </application>
 
 </manifest>
