--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme" />
 
+        <activity android:name="IntroActivity"
+            android:label="@string/app_name" />
+
         <activity android:name=".ResultsActivity" />
 
         <meta-data
