--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,8 @@
         <activity android:name="IntroActivity"
             android:label="@string/app_name" />
 
-        <activity android:name=".ResultsActivity" />
+        <activity android:name=".ResultsActivity"
+            android:windowSoftInputMode="stateAlwaysHidden"/>
 
         <meta-data
             android:name="com.google.android.gms.version"
